--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development nodemon backend/server.js",
-    "build": "npm i && npm i --prefix frontend && npm run build --prefix frontend",
-    "start": "cross-env NODE_ENV=production node backend/server.js"
+    "dev": "nodemon server.js",
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
